Corrected link in <a> tag - index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1><strong>Moja pierwsza strona</strong></h1>
 <ul>
     <li>
-        <a class="data-colour" href="kontakt.html" title="Idź do strony kontaktowej">O mnie</a>
+        <a class="data-colour" href="o-mnie.html" title="Idź do strony kontaktowej">O mnie</a>
     </li>
     <li>
         <a class="data-colour" href="kontakt.html" title="Idź do strony kontaktowej">Kontakt</a>
